--- a/record.html
+++ b/record.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Record and Playback Audio</title>
+    <title>TESTING</title>
 </head>
 <body>
     <button id="recordButton">Record</button>
