--- a/record.html
+++ b/record.html
@@ -44,8 +44,8 @@
 const record = document.querySelector('.record');
 const stop = document.querySelector('.stop');
 const soundClips = document.querySelector('.sound-clips');
-const canvas = document.querySelector('.visualizer');
-const mainSection = document.querySelector('.main-controls');
+//const canvas = document.querySelector('.visualizer');
+//const mainSection = document.querySelector('.main-controls');
 
 // disable stop button while not recording
 
@@ -54,7 +54,7 @@ stop.disabled = true;
 // visualiser setup - create web audio api context and canvas
 
 let audioCtx;
-const canvasCtx = canvas.getContext("2d");
+//const canvasCtx = canvas.getContext("2d");
 
 //main block for doing the audio recording
 
@@ -67,7 +67,7 @@ if (navigator.mediaDevices.getUserMedia) {
   let onSuccess = function(stream) {
     const mediaRecorder = new MediaRecorder(stream);
 
-    visualize(stream);
+    //visualize(stream);
 
     record.onclick = function() {
       mediaRecorder.start();
@@ -153,7 +153,9 @@ if (navigator.mediaDevices.getUserMedia) {
 } else {
    console.log('getUserMedia not supported on your browser!');
 }
-
+      
+      
+/*
 function visualize(stream) {
   if(!audioCtx) {
     audioCtx = new AudioContext();
@@ -210,12 +212,8 @@ function visualize(stream) {
 
   }
 }
+*/
 
-window.onresize = function() {
-  canvas.width = mainSection.offsetWidth;
-}
-
-window.onresize();
 </script>
 
   </body>
