--- a/record.html
+++ b/record.html
@@ -26,7 +26,7 @@
               //console.log(mediaRecorder.state);
               //console.log("recorder started");
               //record.style.background = "red";
-              //stop.disabled = false;
+              stop.disabled = false;
               record.disabled = true;
             }
             stop.onclick = function() {
