--- a/record.html
+++ b/record.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>TESTRecorder</title>
+    <title>..Recorder</title>
   </head>
   <body>
       <button class="record">Record</button>
