--- a/chat.html
+++ b/chat.html
@@ -9,8 +9,9 @@
             margin: 0;
             height: 100%;
             font-size: large;
+            font-family: fantasy;
             background: black;
-            color: white
+            color: white;
         }
     </style>
     <link rel="icon" href="data:,">
