--- a/chat.html
+++ b/chat.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
     <style>
         body, html {
             margin: 0;
             height: 100%;
             font-size: large;
-            font-family: fantasy;
+            font-family: 'League Gothic', sans-serif;
             background: black;
             color: white;
         }
