--- a/chat.html
+++ b/chat.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />-->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=League+Gothic&display=swap">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
+        textarea {
+            font-size: larger;
+            font-family: 'League Gothic', sans-serif;
+            background-color: #B3C0B7;
+        }
         body, html {
             margin: 0;
             height: 100%;
-            font-size: large;
+            font-size: larger;
             font-family: 'League Gothic', sans-serif;
             background: black;
             color: white;
