--- a/html/test.htm
+++ b/html/test.htm
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!-- https://jay23606.github.io/chat-gpt-voice/html/test.htm -->
+                    <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>JS Bin</title>
-</head>
-<body>
-</body>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body>
+    <script>
+      document.write("Hello World!");
+    </script>
+  </body>
 </html>
