gpt-voice commit

--- a/html/test.htm
+++ b/html/test.htm
@@ -8,7 +8,7 @@
     <h1 id="greeting"></h1>
     <script>
       let greeting = document.getElementById("greeting");
-      greeting.innerHTML = "Hello World";
+      greeting.innerHTML = "Hello World2";
     </script>
   </body>
 </html>
