gpt-voice commit

--- a/html/test.htm
+++ b/html/test.htm
@@ -1,14 +1,9 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/test.htm -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Hello World2</title>
-  </head>
   <body>
-    <h1 id="greeting"></h1>
     <script>
-      let greeting = document.getElementById("greeting");
-      greeting.innerHTML = "Hello World2";
+      document.write("Hello World!");
     </script>
   </body>
 </html>
