--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
         <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:large">Submit</button>
     </div>
     <div id="save-div">
-        <button id="save-code" style="display:none">Save</button>
+        <button id="save-code">Save</button>
         <a id="gp-link" target="_blank" title="There is some delay before it's available-try passing random parameters" href="#"></a>
     </div>
     <div id="openai-output" style="white-space:pre-wrap; color: white"></div>
