--- a/chat.html
+++ b/chat.html
@@ -29,7 +29,7 @@
         <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Voice</label>
         <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:large">Submit</button>
     </div>
-    <div id="save-div">
+    <div id="save-div" style="display:none">
         <button id="save-code">Save</button>
         <a id="gp-link" target="_blank" title="There is some delay before it's available-try passing random parameters" href="#"></a>
     </div>
