gpt-voice commit

--- a/html/test.html
+++ b/html/test.html
@@ -1,11 +1,14 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/test.html -->
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Hello World</title>
+  </head>
   <body>
-    <h1 id="myHeading"></h1>
+    <h1 id="hello"></h1>
 
     <script>
-      document.getElementById("myHeading").innerHTML = "Hello World!";
+      document.getElementById("hello").innerHTML = "Hello World";
     </script>
   </body>
 </html>
